[package]
name = "di"
version = "0.1.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
description = "A small cli tool to show disk usage information"

[dependencies]
ansi_term = "0.11"
clap = "2"
failure = "0.1"
ignore = "0.4"
num_cpus = "1.0"
pretty-bytes = "0.2"
separator = "0.3.1"
structopt = "0.2"
